--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 <fieldset><legend>Sunshine Zone</legend>
-<figure><img src="Picture1.jpg" alt="zone map"></figure>
+<figure><img src="zone.jpg" alt="zone map"></figure>
 <p>Please use this map to determine which zone you are in.</p>
 <select name="zone">
 	<option>Zone 1</option>
@@ -44,6 +44,7 @@
 	<option>Zone 3</option>
 	<option>Zone 4</option>
 	<option>Zone 5</option>
+	<option>Zone 6</option>
 </select>
 </fieldset>
 
